# aircraft

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yaml
include/: aircraft.hpp  settings.hpp
src/: aircraft.cpp  camera.cpp  settings.cpp
